--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TakeMe</string>
+    <string name="nav_home_btn1">Favorites</string>
+    <string name="nav_home_btn2">Map</string>
+    <string name="nav_home_btn3">Profile</string>
 </resources>
