bottom sheet added with search bar but no input text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="nav_home_btn1">Favorites</string>
     <string name="nav_home_btn2">Map</string>
     <string name="nav_home_btn3">Profile</string>
+    <string name="sheet_home_search_hint">Where to?</string>
+
 </resources>
