basic service code added, not tested if working, previous commit did not have this changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="nav_home_btn2">Map</string>
     <string name="nav_home_btn3">Profile</string>
     <string name="sheet_home_search_hint">Where to?</string>
+    <string name="check_route_service_description">This service alerts when you get out of presented route</string>
 
 </resources>
