Added buttons for forecast and cancel route, only cancel route is functional

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="nav_home_btn3">Profile</string>
     <string name="sheet_home_search_hint">Where to?</string>
     <string name="check_route_service_description">This service alerts when you get out of presented route</string>
+    <string name="btn_cancel_route">End route</string>
+    <string name="btn_map_forecast">See the forecast</string>
 
 </resources>
